# dprint-plugin-ruff

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check_updates.yml  ci.yml
deployment/: schema.json
deployment/npm/: README.md  index.test.js  package-lock.json  package.json  setup.js
scripts/: generate_release_notes.ts  update.ts
src/: format_text.rs  lib.rs  wasm_plugin.rs
src/configuration/: configuration.rs  resolve_config.rs
tests/: test.rs
tests/specs/: Basic.txt  Config.txt  Notebook.txt  Pyi.txt
web-time/: Cargo.toml  lib.rs
