[package]
name = "dprint-plugin-ruff"
version = "0.2.1"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-ruff"
keywords = ["formatting", "formatter", "ruff"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-ruff"
description = "Python formatter for dprint via Ruff."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.51"
dprint-core = { version = "0.63.3", default-features = false }
ruff_formatter = { git = "https://github.com/astral-sh/ruff", tag = "v0.3.1" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "v0.3.1" }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff", tag = "v0.3.1" }
serde = { version = "1.0.108", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.9.5"
pretty_assertions = "1.4.0"
serde_json = { version = "1.0" }
